--- a/FinanzasMiHogar.App.FrontEnd/Pages/Registro/Registro.cshtml
+++ b/FinanzasMiHogar.App.FrontEnd/Pages/Registro/Registro.cshtml
@@ -2,3 +2,43 @@
 @model FinanzasMiHogar.App.FrontEnd.Pages.RegistroModel
 @{
 }
+
+<div class="cover-container d-flex w-1 h-100 p-2 flex-column bg-gradient">
+            <div class="col-md-12 col-md-9">
+                <h4 class="mb-md-8 " >Registro Finanzas Mi Hogar</h4>
+                <!-- Mensajes de Verificación -->
+                <form class="needs-validation justify-content-center"   novalidate/>
+                  <div class="row g-3">
+                    <div class="col-sm-6">
+                      <label for="firstName" class="form-label">Nombres</label>
+                      <input type="text" class="form-control" id="firstName" name= "name"placeholder="" value="" required>
+                      <div class="invalid-feedback">
+                        Valid first name is required.
+                      </div>
+                    </div>
+            
+                    <div class="col-md-12">
+                      <label for="email" class="form-label">Email
+                      <input type="email" class="form-control " id="email" name="correo" placeholder="you@example.com" required>
+                      <div class="invalid-feedback">
+                        Valid email is required.
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="password1" class="form-label">Contraseña
+                      <input type="password" class="form-control " id="password1" name="contra" placeholder="" required>
+                      <div class="invalid-feedback">
+                        Valid Contraseña is required.
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <label for="password2" class="form-label">Confirmar Contraseña
+                      <input type="password" class="form-control " id="password2" placeholder="" required>
+                      <div class="invalid-feedback">
+                        Valid Contraseña is required.
+                      </div>
+                    </div>
+ 
+                    <button class="btn btn-lg btn-secondary fw-bold  " type="submit">Registrar</button>
+            
+        </div>
