--- a/FinanzasMiHogar.App.FrontEnd/Pages/Shared/_Layout.cshtml
+++ b/FinanzasMiHogar.App.FrontEnd/Pages/Shared/_Layout.cshtml
@@ -1,17 +1,19 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+﻿d<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Finanzas Mi Hogar</title>
+    <title>@ViewData["Title"] Finanzas Mi Hogar</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/form-validation.css">
+    <link rel="stylesheet" href="~/cover.css">
 </head>
 <body bg="https://valenciaplaza.com/public/Image/2018/10/fondos2_forCrop.jpg" >
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">FinanzasMiHogar.App.FrontEnd</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Finanzas Mi Hogar</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,10 +21,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Registro/Registro">Registro</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/InicioSesion/Inicio_Sesion">Iniciar Sesión</a>
                         </li>
                     </ul>
                 </div>
@@ -43,8 +45,8 @@
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-
+    <script src="~/js/site.js" ></script>
+    <Script src="~/js/form-validation.js"></Script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
