Inicio Sesion y regitro de Usuarios

--- a/FinanzasMiHogar.App.FrontEnd/Pages/Registro/Registro.cshtml
+++ b/FinanzasMiHogar.App.FrontEnd/Pages/Registro/Registro.cshtml
@@ -8,7 +8,7 @@
                 <h4 class="mb-md-8 " >Registro Finanzas Mi Hogar</h4>
                 <!-- Mensajes de Verificación -->
                 
-                <form class="needs-validation justify-content-center"  onsubmit="verificarContraseña(); return false"  novalidate/>
+                <form class="needs-validation justify-content-center"   novalidate>
                   
                     <div class="col-sm-6">
                       <label for="Nombre" class="form-label">Nombres</label>
@@ -39,9 +39,9 @@
                         Este campo es requerido.
                       </div>
                     </div>
-                   
- 
                     <button class="btn btn-lg btn-secondary fw-bold  " type="submit">Registrar</button>
-            
+                   </form>  
+                
         </div>
+
        
