--- a/FinanzasMiHogar.App.FrontEnd/Pages/InicioSesion/Inicio_Sesion.cshtml
+++ b/FinanzasMiHogar.App.FrontEnd/Pages/InicioSesion/Inicio_Sesion.cshtml
@@ -6,10 +6,8 @@
             <div class="col-md-12 col-md-9">
                 <h4 class="mb-md-8 " >Registro Finanzas Mi Hogar</h4>
                 <!-- Mensajes de Verificación -->
-                
-                <form class="needs-validation justify-content-center"novalidate/>
-            
-                    <div class="col-md-12">
+                <form  class="needs-validation justify-content-center">
+                   <div class="col-md-12">
                       <label for="email" class="form-label">Email
                       <input type="email" class="form-control " id="email" name="correo" placeholder="you@example.com" required>
                       <div class="invalid-feedback">
@@ -23,8 +21,11 @@
                         Contraseña es requerida.
                       </div>
                     </div>
-                   <button class="btn btn-lg btn-secondary fw-bold  " type="submit">Iniciar Sesión</button>
+                   <button class="btn btn-lg btn-secondary fw-bold" type="submit">Iniciar Sesión</button>
                    <a class="nav-link text-dark" asp-area="" asp-page="/Registro/Registro">Registrarse</a>
-            
+                </form>
         </div>
-       
+
+ @section Scripts{ 
+@await  Html.PartialAsync("_ValidationScriptsPartial")
+}
